fix: biome stupid 2

--- a/apps/backend/biome.json
+++ b/apps/backend/biome.json
@@ -5,5 +5,12 @@
     "parser": {
       "unsafeParameterDecoratorsEnabled": true
     }
+  },
+  "linter": {
+    "rules": {
+      "style": {
+        "useImportType": "off"
+      }
+    }
   }
 }
