--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,8 @@
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-dropzone": "^15.0.0",
+    "react-easy-crop": "^5.5.6",
     "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
