--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "dev": "concurrently \"nest start --watch\" \"cd client && bun dev\"",
+    "dev": "nest start --watch", 
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
@@ -28,6 +29,7 @@
     "@types/multer": "^2.0.0",
     "@types/unidecode": "^1.1.0",
     "axios": "^1.13.5",
+    "cache-manager": "^7.2.8",
     "cheerio": "^1.2.0",
     "jsdom": "^28.1.0",
     "multer": "^2.0.2",
@@ -46,7 +48,6 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
-    "concurrently": "^9.2.1",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
@@ -59,13 +60,19 @@
     "typescript": "^5.7.3"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
