--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/vite": "^4.2.0",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
+    "react-diff-viewer-continued": "^4.1.2",
     "react-dom": "^19.2.4",
     "react-dropzone": "^15.0.0",
     "react-easy-crop": "^5.5.6",
