--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,8 +18,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.6",
     "@nestjs/axios": "^4.0.1",
-    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
@@ -29,9 +29,9 @@
     "@types/multer": "^2.0.0",
     "@types/unidecode": "^1.1.0",
     "axios": "^1.13.5",
-    "cache-manager": "^7.2.8",
     "cheerio": "^1.2.0",
     "jsdom": "^28.1.0",
+    "keyv": "^5.6.0",
     "multer": "^2.0.2",
     "puppeteer": "^24.37.4",
     "reflect-metadata": "^0.2.2",
@@ -60,13 +60,19 @@
     "typescript": "^5.7.3"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
