--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "noEmit": true,
     "skipLibCheck": true,
-    "preserveWatchOutput": true
+    "preserveWatchOutput": true,
+    "types": ["vite/client"]
   },
   "include": ["src", "vite.config.ts"]
 }
