--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -57,3 +57,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Uploads directory
 uploads/
+
+# Public directory (contains the frontend build output)
+public/
