--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "out/**"]
+      "outputs": ["dist/**", "../backend/public/**", ".next/**", "out/**"]
     },
     "check-types": {
       "dependsOn": ["^check-types"]
