--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,6 +30,7 @@
     "@types/unidecode": "^1.1.0",
     "axios": "^1.13.5",
     "cheerio": "^1.2.0",
+    "express": "^5.2.1",
     "express-basic-auth": "^1.2.1",
     "jsdom": "^28.1.0",
     "keyv": "^5.6.0",
