--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "turbo lint",
     "check": "biome check",
     "check:write": "biome check --write",
-    "check:staged": "biome check --staged"
+    "check:staged": "biome check --staged",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "2.4.2",
+    "husky": "^9.1.7",
     "turbo": "latest"
   },
   "packageManager": "pnpm@10.30.0"
